--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,9 @@
     box-sizing: border-box;
     font-size: 63.5%;
 }
+
+$color-primary: #4285F4;
+$color-primary-light: #4285F4;
 *{
     margin: 0;
     padding: 0;
@@ -16,17 +19,18 @@ html, body{
     display: flex;
     width: 100%;
     height: 100%;
+    overflow-y: hidden;
 }
 
 .map{
-    width: 50%;
+    width: 60%;
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
 .left-content{
-    width: 50%;
+    width: 40%;
     padding: 2.4rem;
     display: flex;
     flex-direction: column;
@@ -69,5 +73,111 @@ input[type=text]{
     }
     &:focus > div{
         border: 1px solid  rgb(58, 58, 104);
+    }
+}
+
+.postcode-list{
+    background-color: #e8e8e8;
+    padding: 2.4rem;
+    display: flex;
+    flex-direction: column;
+    min-height: auto;
+    transition: all 300ms ease;
+    gap: 2.4rem;
+    overflow: auto;
+    li{
+        list-style: none;
+        padding: 2.4rem;
+        background-color: white;
+        display: flex;
+        gap: 2.4rem;
+        
+        &:hover{
+            outline: 1px solid black;
+            cursor: pointer;
+
+            .left .label-counter{
+                background-color: $color-primary;
+                color: white;
+            }
+        }
+
+        &.selected{
+            .left .label-counter{
+                background-color: $color-primary;
+                color: white;
+            }
+        }
+        
+
+        .right{
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            .head-content{
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-end;
+            }
+
+            .direction{
+                display: flex;
+                gap: 0.5rem;
+                color: $color-primary;
+                text-decoration: none;
+                width: fit-content;
+                &:visited{
+                    color: $color-primary;
+                }
+            }
+        }
+        .left{
+            width: 3rem;
+            .label-counter{
+                background-color: #e8e8e8;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-weight: bold;
+                text-align: center;
+            }
+
+            
+        }
+    }
+}
+
+.head-txt{
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.distance{
+    color: #4f4f4f;
+}
+
+.label {
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background-color: #4285F4;
+    padding: 4px 6px;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
+    animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
     }
 }
