--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,6 +20,15 @@ html, body{
     width: 100%;
     height: 100%;
     overflow-y: hidden;
+
+    @media (max-width: 991px) {
+        .map{
+            display: none;
+        }
+        .left-content{
+            width: 100%;
+        }
+    }
 }
 
 .map{
@@ -111,13 +120,14 @@ input[type=text]{
         
 
         .right{
-            width: 80%;
+            width: 100%;
             display: flex;
             flex-direction: column;
             gap: 1rem;
             .head-content{
                 display: flex;
                 justify-content: space-between;
+                gap: 1.4rem;
                 align-items: flex-end;
             }
 
